Fix sticky table headers on mobile
Fixes #2

--- a/src/styles/mobile.css
+++ b/src/styles/mobile.css
@@ -182,4 +182,8 @@
     width: 80px;
     height: 80px;
   }
+
+  .area > .table > .row:first-child {
+    top: 200px;
+  }
 }
